# CVL

./: .chplcheck.cfg  .gitignore  Mason.toml  README.md  build_docs.sh  compile.py  lint.sh  test.sh  tox.ini
benchmarks/: benchmarks.json  nbody-fma.chpl  nbody.chpl
cmake/: CVIConfig.cmake  CVLConfig.cmake
containers/: Dockerfile  README.md
doc/: build_docs.sh  conf.py  index.rst
docs/: index.rst
example/: SAXPY.chpl  SAXPY.compopts  StreamConfig.chpl  stream.chpl  streamExplicitVector.chpl  streamVectorIterators.chpl
experiments/: CompileTimeString.chpl  arm-bitops.c  arm-int-mul.c  dispatch.chpl  dispatch2.chpl  iterators.chpl  perfTest.chpl
lint/: EverythingTested.py  OperatorsUpToDate.sh  rules.py
src/: CVI.chpl  CVL.chpl  Intrin.chpl  IntrinArm64_128.chpl  IntrinArm64_256.chpl  IntrinX86_128.chpl  IntrinX86_256.chpl  SIMD.chpl  SLEEF.chpl  Vector.chpl  VectorRef.chpl  wrapper-arm64-128-double.c  wrapper-arm64-128-double.h  wrapper-arm64-128-float.c  wrapper-arm64-128-float.h  wrapper-arm64-128-int16.h  wrapper-arm64-128-int32.h  wrapper-arm64-128-int64.h  wrapper-arm64-128-int8.h  wrapper-arm64-128-real32.h  wrapper-arm64-128-real64.h  wrapper-arm64-128.c  wrapper-arm64-128.h  wrapper-x86-128-int16.h  wrapper-x86-128-int32.h  wrapper-x86-128-int64.h  wrapper-x86-128-int8.h  wrapper-x86-128-real32.h  wrapper-x86-128.c  wrapper-x86-128.h  wrapper-x86-256-int16.h  wrapper-x86-256-int32.h  wrapper-x86-256-int64.h  wrapper-x86-256-int8.h  wrapper-x86-256-real32.h  wrapper-x86-256-real64.h  wrapper-x86-256.c  wrapper-x86-256.h  wrapper-x86-gathers.h
test/: ArrTest.chpl  ArrTest.good  BitTest.chpl  BitTest.int-128.good  BitTest.int-256.good  BitTest.real-128.good  BitTest.real-256.good  Bounds.chpl  BytesTest.chpl  BytesTest.good  Casting.chpl  CmpTest.chpl  CmpTest.int-128.good  CmpTest.int-256.good  CmpTest.real-128.good  CmpTest.real-256.good  Convolve.chpl  Distributed.chpl  FmaTest.chpl  FmaTest.good  GatherTest.chpl  GatherTest.good  InitTest.chpl  IsAllTest.chpl  IsAllTest.int-128.good  IsAllTest.int-256.good  IsAllTest.real-128.good  IsAllTest.real-256.good  IterTest.basic-int-128.good  IterTest.basic-int-256.good  IterTest.basic-real-128.good  IterTest.basic-real-256.good  IterTest.chpl  IterTest.jagged-int-128.good  IterTest.jagged-int-256.good  IterTest.jagged-real-128.good  IterTest.jagged-real-256.good  MaskLoadTest.chpl  MaskLoadTest.good  MathFuncs.chpl  (+15 more)
tests/: COMPOPTS  README.md  arrTest.good  fmaTest.good  initTest.good  iterTest.chpl  mathFuncs.good  mathTest.good  perfTest.chpl  shuffleTest.good  sqrtTest.good  testAll.chpl  testAll.compopts  testAll.execopts
tests/cmake/ExampleProject/: CMakeLists.txt  main.chpl
util/: bench.py  examples.sh  generate_ops.py  lint.sh  lldb_simd.py  localRegistry.sh  print256.py  test.sh  testAll.sh  testCMake.sh  tox.ini  tox.sh
(+81 files in other folders)
